force-app/main/default/objects/GTA__c/GTA__c.object-meta.xml
<CustomObject>
    <description>GD-2173, GD-2170</description>
    <label>GTA</label>
    <nameField>
        <displayFormat>GTA-{000000}</displayFormat>
        <label>GTA&apos;s Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>