force-app/main/default/objects/GTA__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The employee&apos;s role should be GTA.</errorMessage>
        <filterItems>
            <field>Employee__c.Role__c</field>
            <operation>equals</operation>
            <value>GTA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>GTAs</relationshipLabel>
    <relationshipName>GTAs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>