force-app/main/default/objects/GTA__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to identify the Primary GTA in the department. One department can have multiple GTA&apos;s but it should only have one primary GTA.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>